--- a/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
+++ b/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
@@ -15,6 +15,15 @@
 
     <ItemGroup>
       <PackageReference Include="Moq" Version="4.18.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+      <PackageReference Include="Testcontainers" Version="2.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.5" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+      <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
