--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -24,9 +24,14 @@ jobs:
       run:  dotnet test ./tests/NKZSoft.Template.Application.Tests --configuration Release --no-build
     - name: Publish
       run: dotnet publish -c Release -o ./publish/app --no-restore --no-build
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: ghcr.io/nkz-soft/microservice-template/microservice-template
+#    - name: Set up Docker Buildx
+#      id: buildx
+#      uses: docker/setup-buildx-action@v2
     - name: Login to Github Packages
       uses: docker/login-action@v2
       with:
@@ -34,12 +39,10 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build image and push to GitHub Container Registry
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
-        # relative path to the place where source code with Dockerfile is located
         context: .
-        push: true
-        # Note: tags has to be all lower-case
-        tags: ghcr.io/nkz-soft/microservice-template/microservice-template:latest
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
