fix starter issue

--- a/src/NKZSoft.Template.Presentation.Starter/Properties/launchSettings.json
+++ b/src/NKZSoft.Template.Presentation.Starter/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "TG.Template.Presentation.Starter": {
+    "NKZSoft.Template.Presentation.Starter": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
