--- a/src/NKZSoft.Template.Presentation.GRPC/NKZSoft.Template.Presentation.GRPC.csproj
+++ b/src/NKZSoft.Template.Presentation.GRPC/NKZSoft.Template.Presentation.GRPC.csproj
@@ -1,9 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+      <TargetFramework>net6.0</TargetFramework>
+      <Version>1.0.1</Version>
+      <LangVersion>latest</LangVersion>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
+      <EnableNETAnalyzers>true</EnableNETAnalyzers>
+      <EnableNETAnalyzers>true</EnableNETAnalyzers>
+      <AnalysisLevel>latest</AnalysisLevel>
     </PropertyGroup>
 
     <ItemGroup>
