--- a/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
+++ b/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
@@ -18,4 +18,8 @@
       <Folder Include="Exceptions" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NKZSoft.Template.Events\NKZSoft.Template.Events.csproj" />
+    </ItemGroup>
+
 </Project>
