--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
@@ -30,6 +30,9 @@
     "PostgresConnection": {
       "ConnectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres;",
       "Database": "template_db"
+    },
+    "RabbitMqConnection": {
+      "ConnectionString": "rabbitmq://rabbitmq:rabbitmq@localhost:5672",
     }
   },
   "Services": {
