#2 Migrate to the minimal hosting model

--- a/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
+++ b/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
@@ -22,4 +22,10 @@
       <PackageReference Include="Scrutor" Version="4.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <InternalsVisibleTo Include="NKZSoft.Template.Presentation.GraphQL.Tests" />
+      <InternalsVisibleTo Include="NKZSoft.Template.Presentation.REST.Tests" />
+      <InternalsVisibleTo Include="NKZSoft.Template.Presentation.GRPC.Tests" />
+    </ItemGroup>
+
 </Project>
