--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -43,3 +43,7 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
+    - name: Drafts release notes
+      uses: release-drafter/release-drafter@v5
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
