--- a/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
+++ b/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
@@ -10,7 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="10.0.1" />
+      <PackageReference Include="MediatR" Version="11.0.0" />
     </ItemGroup>
 
     <ItemGroup>
