--- a/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
+++ b/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
@@ -13,15 +13,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-        <PackageReference Include="Microsoft.NETCore.Platforms" Version="6.0.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
+        <PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.0-rc.2.22472.3" />
         <PackageReference Include="Moq" Version="4.18.2" />
-        <PackageReference Include="Shouldly" Version="4.0.3" />
+        <PackageReference Include="Shouldly" Version="4.1.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
     <ItemGroup>
