--- a/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
+++ b/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -18,7 +18,7 @@
       <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
       <PackageReference Include="Testcontainers" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0-rc.2.22476.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
       <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
     </ItemGroup>
