--- a/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
+++ b/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -14,7 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
-        <PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.0-rc.2.22472.3" />
+        <PackageReference Include="Microsoft.NETCore.Platforms" Version="7.0.0" />
         <PackageReference Include="Moq" Version="4.18.2" />
         <PackageReference Include="Shouldly" Version="4.1.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
