--- a/src/NKZSoft.Template.MessageBrokers.RabbitMq/NKZSoft.Template.MessageBrokers.RabbitMq.csproj
+++ b/src/NKZSoft.Template.MessageBrokers.RabbitMq/NKZSoft.Template.MessageBrokers.RabbitMq.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -11,12 +11,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-      <PackageReference Include="MassTransit" Version="8.0.7" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+      <PackageReference Include="MassTransit" Version="8.0.8" />
       <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
-      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.7" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
       <PackageReference Include="NKZSoft.Service.Configuration.MassTransit.RabbitMq" Version="1.0.0" />
     </ItemGroup>
 
