Add Health Checks

--- a/nuget.config
+++ b/nuget.config
@@ -8,10 +8,14 @@
     <packageSources>
         <clear />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+        <add key="local" value="./local" />
     </packageSources>
 
     <packageSourceMapping>
         <packageSource key="nuget.org">
+            <package pattern="*" />
+        </packageSource>
+        <packageSource key="local">
             <package pattern="*" />
         </packageSource>
     </packageSourceMapping>
