--- a/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
+++ b/src/NKZSoft.Template.Presentation.Starter/NKZSoft.Template.Presentation.Starter.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
-        <Version>1.2.6</Version>
+        <Version>1.4.0</Version>
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
       <PackageReference Include="Scrutor" Version="4.2.0" />
     </ItemGroup>
 
