--- a/src/NKZSoft.Template.Application/NKZSoft.Template.Application.csproj
+++ b/src/NKZSoft.Template.Application/NKZSoft.Template.Application.csproj
@@ -11,13 +11,14 @@
 
     <ItemGroup>
         <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="6.1.0" />
-        <PackageReference Include="FluentResults" Version="3.15.0" />
-        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
+        <PackageReference Include="FluentResults" Version="3.15.1" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
         <PackageReference Include="Mapster" Version="7.3.0" />
         <PackageReference Include="Mapster.Async" Version="2.0.0" />
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
 
@@ -29,6 +30,19 @@
 
     <ItemGroup>
         <Generated Include="**\*.g.cs" />
+        <Generated Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="obj\**" />
     </ItemGroup>
     <Target Name="CleanGenerated">
         <Delete Files="@(Generated)" />
