--- a/src/NKZSoft.Template.Common/NKZSoft.Template.Common.csproj
+++ b/src/NKZSoft.Template.Common/NKZSoft.Template.Common.csproj
@@ -12,5 +12,6 @@
     <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 </Project>
