--- a/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
+++ b/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
@@ -10,7 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="11.0.0" />
+      <PackageReference Include="MediatR" Version="11.1.0" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
