--- a/src/NKZSoft.Template.Events/NKZSoft.Template.Events.csproj
+++ b/src/NKZSoft.Template.Events/NKZSoft.Template.Events.csproj
@@ -12,4 +12,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+  </ItemGroup>
+
 </Project>
