--- a/src/NKZSoft.Template.Infrastructure.Core/NKZSoft.Template.Infrastructure.Core.csproj
+++ b/src/NKZSoft.Template.Infrastructure.Core/NKZSoft.Template.Infrastructure.Core.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
