--- a/src/NKZSoft.Template.MessageBrokers.RabbitMq/NKZSoft.Template.MessageBrokers.RabbitMq.csproj
+++ b/src/NKZSoft.Template.MessageBrokers.RabbitMq/NKZSoft.Template.MessageBrokers.RabbitMq.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.8" />
       <PackageReference Include="NKZSoft.Service.Configuration.MassTransit.RabbitMq" Version="1.0.1" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
