--- a/src/NKZSoft.Template.Presentation.GRPC/NKZSoft.Template.Presentation.GRPC.csproj
+++ b/src/NKZSoft.Template.Presentation.GRPC/NKZSoft.Template.Presentation.GRPC.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
       <TargetFramework>net7.0</TargetFramework>
-      <Version>1.0.2</Version>
+      <Version>1.0.3</Version>
       <LangVersion>latest</LangVersion>
       <ImplicitUsings>enable</ImplicitUsings>
       <Nullable>enable</Nullable>
@@ -16,11 +16,12 @@
 
     <ItemGroup>
       <PackageReference Include="Google.Protobuf" Version="3.21.9" />
-      <PackageReference Include="protobuf-net" Version="3.1.22" />
-      <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.177" />
-      <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.177" />
-      <PackageReference Include="protobuf-net.Reflection" Version="3.1.22" />
+      <PackageReference Include="protobuf-net" Version="3.1.25" />
+      <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.179" />
+      <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.179" />
+      <PackageReference Include="protobuf-net.Reflection" Version="3.1.25" />
       <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
 </Project>
