--- a/src/NKZSoft.Template.Presentation.SignalR/NKZSoft.Template.Presentation.SignalR.csproj
+++ b/src/NKZSoft.Template.Presentation.SignalR/NKZSoft.Template.Presentation.SignalR.csproj
@@ -2,23 +2,26 @@
 
     <PropertyGroup>
       <TargetFramework>net7.0</TargetFramework>
-      <Version>1.0.3</Version>
+      <Version>1.0.0</Version>
       <LangVersion>latest</LangVersion>
-      <Nullable>enable</Nullable>
       <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
       <EnableNETAnalyzers>true</EnableNETAnalyzers>
       <AnalysisLevel>latest</AnalysisLevel>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="HotChocolate.AspNetCore" Version="12.15.2" />
-      <PackageReference Include="HotChocolate.Data" Version="12.15.2" />
-      <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.15.2" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
       <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\NKZSoft.Template.Application\NKZSoft.Template.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
+  
 </Project>
