--- a/tests/NKZSoft.Template.Application.Tests/NKZSoft.Template.Application.Tests.csproj
+++ b/tests/NKZSoft.Template.Application.Tests/NKZSoft.Template.Application.Tests.csproj
@@ -36,6 +36,7 @@
         <PackageReference Include="Moq" Version="4.18.2" />
         <PackageReference Include="Respawn" Version="6.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
