--- a/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
+++ b/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
       <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
 </Project>
