--- a/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
+++ b/tests/NKZSoft.Template.Domain.Tests/NKZSoft.Template.Domain.Tests.csproj
@@ -22,6 +22,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
         <PackageReference Include="xunit" Version="2.4.2" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
     </ItemGroup>
 
     <ItemGroup>
