--- a/tests/NKZSoft.Template.Presentation.GraphQL.Tests/NKZSoft.Template.Presentation.GraphQL.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.GraphQL.Tests/NKZSoft.Template.Presentation.GraphQL.Tests.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
-    <PackageReference Include="RestSharp" Version="108.0.2" />
+    <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
