add reportgenerator to merge files

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,10 +32,14 @@ jobs:
         run:  dotnet test ./tests/NKZSoft.Template.Presentation.SignalR.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
       - name: GRPC Test
         run:  dotnet test ./tests/NKZSoft.Template.Presentation.GRPC.Tests --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
+      - name: Merge test results
+        run: |
+            dotnet tool install -g dotnet-reportgenerator-globaltool
+            reportgenerator "-reports: ./coverage/**/coverage.cobertura.xml" "-targetdir: ./coverage/result" -reporttypes:Cobertura
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: coverage/**/coverage.cobertura.xml
+          filename: coverage/result/*.xml
           badge: true
           fail_below_min: true
           format: markdown
