--- a/src/NKZSoft.Template.Common/NKZSoft.Template.Common.csproj
+++ b/src/NKZSoft.Template.Common/NKZSoft.Template.Common.csproj
@@ -1,17 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <EnableNETAnalyzers>true</EnableNETAnalyzers>
-        <AnalysisLevel>latest</AnalysisLevel>
-        <CodeAnalysisTreatWarningsAsErrors>false</CodeAnalysisTreatWarningsAsErrors>
-    </PropertyGroup>
-
     <ItemGroup>
-      <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
-      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="Ardalis.GuardClauses" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
     </ItemGroup>
 </Project>
