--- a/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
+++ b/src/NKZSoft.Template.Domain/NKZSoft.Template.Domain.csproj
@@ -1,17 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <EnableNETAnalyzers>true</EnableNETAnalyzers>
-        <AnalysisLevel>latest</AnalysisLevel>
-        <CodeAnalysisTreatWarningsAsErrors>false</CodeAnalysisTreatWarningsAsErrors>
-    </PropertyGroup>
-
     <ItemGroup>
-      <PackageReference Include="MediatR" Version="11.1.0" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="MediatR" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
 
     <ItemGroup>
