--- a/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
+++ b/tests/NKZSoft.Template.Common.Tests/NKZSoft.Template.Common.Tests.csproj
@@ -14,14 +14,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Moq" Version="4.18.2" />
-      <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
-      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-      <PackageReference Include="Testcontainers" Version="2.2.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
-      <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="Moq" />
+      <PackageReference Include="Serilog.Extensions.Hosting" />
+      <PackageReference Include="Serilog.Sinks.Console" />
+      <PackageReference Include="Testcontainers" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" />
+      <PackageReference Include="xunit.extensibility.core" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
 
 </Project>
