--- a/tests/NKZSoft.Template.Presentation.GRPC.Tests/NKZSoft.Template.Presentation.GRPC.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.GRPC.Tests/NKZSoft.Template.Presentation.GRPC.Tests.csproj
@@ -1,30 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-      <TargetFramework>net7.0</TargetFramework>
-      <ImplicitUsings>enable</ImplicitUsings>
-      <Nullable>enable</Nullable>
-      <EnableNETAnalyzers>true</EnableNETAnalyzers>
-      <AnalysisLevel>latest</AnalysisLevel>
-      <ImplicitUsings>true</ImplicitUsings>
-    </PropertyGroup>
-
     <ItemGroup>
-      <PackageReference Include="Grpc.Net.ClientFactory" Version="2.50.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
-      <PackageReference Include="xunit" Version="2.4.2" />
-      <PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
-      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+      <PackageReference Include="Grpc.Net.ClientFactory" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" />
+      <PackageReference Include="xunit" />
+      <PackageReference Include="Xunit.Extensions.Ordering" />
+      <PackageReference Include="xunit.runner.visualstudio">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="coverlet.collector" Version="3.2.0">
+      <PackageReference Include="coverlet.collector">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="FluentAssertions" Version="6.8.0" />
-      <PackageReference Include="Moq" Version="4.18.2" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="FluentAssertions" />
+      <PackageReference Include="Moq" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
 
     <ItemGroup>
