--- a/tests/NKZSoft.Template.Presentation.SignalR.Tests/NKZSoft.Template.Presentation.SignalR.Tests.csproj
+++ b/tests/NKZSoft.Template.Presentation.SignalR.Tests/NKZSoft.Template.Presentation.SignalR.Tests.csproj
@@ -10,25 +10,25 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.0" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0"/>
-      <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
-      <PackageReference Include="xunit" Version="2.4.2" />
-      <PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
-      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+      <PackageReference Include="Serilog.AspNetCore" />
+      <PackageReference Include="xunit" />
+      <PackageReference Include="Xunit.Extensions.Ordering" />
+      <PackageReference Include="xunit.runner.visualstudio">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="coverlet.collector" Version="3.2.0">
+      <PackageReference Include="coverlet.collector">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="FluentAssertions" Version="6.8.0" />
-      <PackageReference Include="Moq" Version="4.18.2" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="FluentAssertions" />
+      <PackageReference Include="Moq" />
+      <PackageReference Update="Microsoft.SourceLink.GitHub" />
     </ItemGroup>
-  
+
     <ItemGroup>
       <ProjectReference Include="..\..\src\NKZSoft.Template.Presentation.SignalR\NKZSoft.Template.Presentation.SignalR.csproj" />
       <ProjectReference Include="..\..\src\NKZSoft.Template.Presentation.Starter\NKZSoft.Template.Presentation.Starter.csproj" />
