--- a/src/NKZSoft.Template.Presentation.GraphQL/NKZSoft.Template.Presentation.GraphQL.csproj
+++ b/src/NKZSoft.Template.Presentation.GraphQL/NKZSoft.Template.Presentation.GraphQL.csproj
@@ -1,20 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFramework>net7.0</TargetFramework>
-      <Version>1.0.3</Version>
-      <LangVersion>latest</LangVersion>
-      <Nullable>enable</Nullable>
-      <ImplicitUsings>enable</ImplicitUsings>
-      <EnableNETAnalyzers>true</EnableNETAnalyzers>
-      <AnalysisLevel>latest</AnalysisLevel>
+      <Version>1.0.4</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="HotChocolate.AspNetCore" Version="12.15.2" />
-      <PackageReference Include="HotChocolate.Data" Version="12.15.2" />
-      <PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.15.2" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+      <PackageReference Include="HotChocolate.AspNetCore" />
+      <PackageReference Include="HotChocolate.Data" />
+      <PackageReference Include="HotChocolate.Data.EntityFramework" />
     </ItemGroup>
 
     <ItemGroup>
