--- a/src/NKZSoft.Template.Presentation.SignalR/NKZSoft.Template.Presentation.SignalR.csproj
+++ b/src/NKZSoft.Template.Presentation.SignalR/NKZSoft.Template.Presentation.SignalR.csproj
@@ -1,19 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-      <TargetFramework>net7.0</TargetFramework>
-      <Version>1.0.0</Version>
-      <LangVersion>latest</LangVersion>
-      <ImplicitUsings>enable</ImplicitUsings>
-      <Nullable>enable</Nullable>
-      <EnableNETAnalyzers>true</EnableNETAnalyzers>
-      <AnalysisLevel>latest</AnalysisLevel>
+      <Version>1.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
-      <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0"/>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     </ItemGroup>
 
     <ItemGroup>
@@ -23,5 +16,5 @@
     <ItemGroup>
       <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
-  
+
 </Project>
