--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Development.json
@@ -2,18 +2,18 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "System": "Debug",
+      "Microsoft": "Debug"
     }
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Verbose",
       "Override": {
-        "System.Net.Http": "Warning"
+        "System.Net.Http": "Verbose"
       }
     },
-    "EnableDbLogging": false
+    "EnableDbLogging": true
   },
   "Kestrel": {
     "endpoints": {
@@ -28,14 +28,17 @@
   },
   "ConnectionStrings": {
     "PostgresConnection": {
-      "ConnectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres;",
-      "Database": "template_db",
+      "ConnectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres;Database=template_db;",
       "HealthCheckEnabled" : true,
       "LoggingEnabled": true
     },
     "RabbitMqConnection": {
       "ConnectionString": "rabbitmq://rabbitmq:rabbitmq@localhost:5672",
-      "HealthCheckEnabled" : false
+      "HealthCheckEnabled" : true
+    },
+    "RedisConnection": {
+      "ConnectionString": "localhost,ssl=False,abortConnect=False",
+      "HealthCheckEnabled" : true
     }
   },
   "Services": {
