--- a/src/NKZSoft.Template.Presentation.Starter/appsettings.Docker.json
+++ b/src/NKZSoft.Template.Presentation.Starter/appsettings.Docker.json
@@ -27,13 +27,16 @@
   },
   "ConnectionStrings": {
     "PostgresConnection": {
-      "ConnectionString": "Host=postgres;Port=5432;Uid=postgres;Password=postgres;",
-      "Database": "template_db",
-      "HealthCheckEnabled" : true,
+      "ConnectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres;Database=template_db;",
+      "HealthCheckEnabled" : false,
       "LoggingEnabled": false
     },
     "RabbitMqConnection": {
       "ConnectionString": "rabbitmq://rabbitmq:rabbitmq@rabbitmq:5672",
+      "HealthCheckEnabled" : false
+    },
+    "RedisConnection": {
+      "ConnectionString": "localhost,ssl=False,abortConnect=False",
       "HealthCheckEnabled" : false
     }
   },
